<resources>
    <string name="med_link_calibration_success">Pump calibration process has been completed,
    please check pump status at next cycle</string>
    <string name="med_link_calibration_failed">Pump calibration Failed! Please check pump
        status</string>
    <string name="med_link_calibrate_alarm">You should calibrate your sensor at the pump
        until %1$s</string>
    <string name="med_link_preferences">Preferences of data loaded by MedLink device</string>
    <string name="key_med_link_calibration_second_alarm">Amount of minutes when the next
        calibration second alarm will be showed.</string>
    <string name="med_link_calibration_second_alarm">pref_med_link_second_calibration_alarm</string>
    <string name="key_med_link_calibration_first_alarm">Amount of minutes when the next
        calibration first alarm will be showed.</string>
    <string name="med_link_calibration_first_alarm">pref_med_link_first_calibration_alarm</string>
    <string name="medlink_medtronic_cmd_stop_could_not_be_delivered">Pump cannot be stoped when the phone battery, or the device battery is below 5%</string>
    <string name="key_medlink_battery_info" translatable="false">pref_medlink_battery_info</string>
    <string name="pref_medlink_battery_info">Which battery info should be displayed at the main AAPS page</string>
    <string name="medlink_key_interval_between_bt_connections" translatable="false">medlink_key_interval_between_bt_connections_summary</string>
    <string name="medlink_key_force_bolus_history_read" translatable="false">medlink_key_force_bolus_history_read_summary</string>
    <string name="key_medlink_init_command" translatable="false">pref_medlink_init_command</string>
    <string name="medlink_init_commands">Commands to be executed on first connect</string>
    <string name="medlink_change_cannula_action">Do you change the cannula together with reservoir?</string>
    <string name="medlink_change_cannula_summary">When you enable this option, whenever there is a reservoir change, a change cannula event will be created.</string>
    <string name="medlink_init_commands_last_bolus_history">Last Bolus History Page(H)</string>
    <string name="medlink_init_commands_previous_bg_history">Previous BG History Page(T and J)</string>
    <string name="medlink_init_commands_last_bg_history">Last BG History Page(C and I)</string>
    <string name="medlink_handle_cannula_change_event">Automatically handle cannula and
    reservoir change event</string>
    <string name="medlink_handle_sensor_change_event">Automatically handle sensor
        change event</string>
    <string name="onetothreedigitnumber" translatable="false">^\\d{1,3}</string>
    <string name="key_medlink_init_commands" translatable="false">medlink_init_commands</string>
    <string name="medlink_delivered">%1$.2f U / %2$.2f U delivered</string>
    <string name="medtronic_name" translatable="false">Medtronic</string>
    <string name="medlink_medtronic_name" translatable="false">Medtronic Pump</string>
    <string name="medtronic_name_short" translatable="false">MDT</string>
    <string name="medlink_medtronic_name_short" translatable="false">MDT-ML</string>
    <string name="mdt_next_calibration" translatable="false">%1$s at %2$s</string>
    <string name="description_pump_medtronic">Pump integration for Medtronic, requires RileyLink device and specific Pump Model</string>
    <string name="description_pump_medtronic_medlink">Pump integration for Medtronic, requires MedLink device</string>
    <string name="key_medtronic_serial" translatable="false">pref_medtronic_serial</string>
    <string name="key_medtronic_pump_type" translatable="false">pref_medtronic_pump_type</string>
    <string name="key_medtronic_frequency" translatable="false">pref_medtronic_frequency</string>
    <string name="key_medtronic_max_bolus" translatable="false">pref_medtronic_max_bolus</string>
    <string name="key_medtronic_max_basal" translatable="false">pref_medtronic_max_basal</string>
    <string name="key_medtronic_bolus_delay" translatable="false">pref_medtronic_bolus_delay</string>
    <string name="key_medtronic_encoding" translatable="false">pref_medtronic_encoding</string>
    <string name="key_medtronic_battery_type" translatable="false">pref_medtronic_battery_type</string>
    <string name="key_medtronic_bolus_debug" translatable="false">pref_medtronic_bolus_debug</string>
    <string name="key_rileylink_mac_address" translatable="false">pref_rileylink_mac_address</string>
    <string name="key_medlink_mac_address" translatable="false">pref_medlink_mac_address</string>
    <string name="key_medtronic_pump_frequency_us_ca" translatable="false">medtronic_pump_frequency_us_ca</string>
    <string name="key_medtronic_pump_frequency_worldwide" translatable="false">medtronic_pump_frequency_worldwide</string>
    <string name="key_medtronic_pump_encoding_4b6b_local" translatable="false">medtronic_pump_encoding_4b6b_local</string>
    <string name="key_medtronic_pump_encoding_4b6b_rileylink" translatable="false">medtronic_pump_encoding_4b6b_rileylink</string>
    <string name="key_medtronic_pump_encoding_medlink" translatable="false">medtronic_pump_encoding_medlink</string>
    <string name="key_medtronic_pump_battery_no" translatable="false">medtronic_pump_battery_no</string>
    <string name="key_medtronic_pump_battery_alkaline" translatable="false">medtronic_pump_battery_alkaline</string>
    <string name="key_medtronic_pump_battery_lithium" translatable="false">medtronic_pump_battery_lithium</string>
    <string name="key_medtronic_pump_battery_nizn" translatable="false">medtronic_pump_battery_nizn</string>
    <string name="key_medtronic_pump_battery_nimh" translatable="false">medtronic_pump_battery_nimh</string>
    <string name="key_medtronic_name_settings" translatable="false">medtronic_name_settings</string>
    <string name="key_medtronic_pump_battery_lipo" translatable="false">medtronic_pump_battery_lipo</string>
    <string name="medtronic_serial_number">Pump Serial Number</string>
    <string name="medtronic_pump_type">Pump Type</string>
    <string name="medtronic_pump_frequency">Pump Frequency</string>
    <string name="medtronic_pump_bolus_delay">Delay before Bolus is started (s)</string>
    <string name="medtronic_pump_max_bolus">Max Bolus on Pump (U)</string>
    <string name="medtronic_pump_max_basal">Max Basal on Pump (U/h)</string>
    <string name="medtronic_pump_encoding">Medtronic Encoding</string>
    <string name="medtronic_pump_frequency_us_ca">US &amp; Canada (916 MHz)</string>
    <string name="medtronic_pump_frequency_worldwide">Worldwide (868 Mhz)</string>
    <string name="medtronic_pump_encoding_4b6b_local">Software 4b6b Encoding</string>
    <string name="medtronic_pump_encoding_4b6b_rileylink">Hardware 4b6b Encoding</string>
    <string name="medtronic_pump_encoding_medlink">Hardware MedLink Encoding</string>
    <string name="medtronic_custom_action_wake_and_tune">Wake and Tune Up</string>
    <string name="medtronic_custom_action_clear_bolus_block">Clear Bolus Block</string>
    <string name="medtronic_custom_action_reset_rileylink">Reset RileyLink Config</string>
    <string name="medtronic_pump_battery_select">Battery Type (Power View)</string>
    <string name="medtronic_pump_battery_no">Not selected (Simple view)</string>
    <string name="medtronic_pump_battery_alkaline">Alkaline (Extended view)</string>
    <string name="medtronic_pump_battery_lithium">Lithium (Extended view)</string>
    <string name="medtronic_pump_battery_nizn">NiZn (Extended view)</string>
    <string name="medtronic_pump_battery_nimh">NiMH (Extended view)</string>
    <string name="medtronic_pump_battery_lipo">Lipo (Extended view)</string>
    <string name="medtronic_bolus_debugging">Bolus/Treatments Debugging</string>
    <string name="rl_battery_label">RileyLink Battery</string>
    <string name="medtronic_errors">Errors</string>
    <string name="medtronic_error_serial_not_set">Serial # not set.</string>
    <string name="medtronic_error_serial_invalid">Serial # invalid.</string>
    <string name="medtronic_error_pump_type_not_set">Pump Type not set.</string>
    <string name="medtronic_error_pump_type_invalid">Pump Type unsupported.</string>
    <string name="medtronic_error_pump_frequency_not_set">Pump Frequency not set.</string>
    <string name="medtronic_error_pump_frequency_invalid">Pump Frequency unsupported.</string>
    <string name="medtronic_error_rileylink_address_invalid">RileyLink Address invalid.</string>
    <string name="medtronic_error_medlink_address_invalid">Invalid MedLink address.</string>
    <string name="medtronic_error_pump_type_set_differs_from_detected">Pump type detected is not the same as configured type.</string>
    <string name="medtronic_error_pump_basal_profiles_not_enabled">Basal profiles/patterns setting is not enabled on pump. Enable it on the pump.</string>
    <string name="medtronic_error_pump_incorrect_basal_profile_selected">Basal profile set on pump is incorrect (must be STD).</string>
    <string name="medtronic_error_pump_wrong_tbr_type_set">Wrong TBR type set on pump (must be Absolute).</string>
    <string name="medtronic_error_pump_wrong_max_bolus_set">Wrong Max Bolus set on Pump (must be %1$.2f).</string>
    <string name="medtronic_error_pump_wrong_max_basal_set">Wrong Max Basal set on Pump (must be %1$.2f).</string>
    <string name="medtronic_error_operation_not_possible_no_configuration">Operation is not possible.\n\n You need to configure Medtronic Pump first, before you can use this operation.</string>
    <string name="medtronic_error_pump_24h_time_change_requested">Over 24h Time change was requested.</string>
    <string name="medtronic_pump_history">Medtronic Pump History</string>
    <string name="medtronic_cmd_cancel_bolus_not_supported">You cancelled Bolus, after it was already set on Pump. Since Medtronic Pump doesn\'t support cancel, you will need to manually cancel it. Put the Pump into Suspend mode and then do Resume (if you still want to cancel). Application will pick up changes, on next update (in less than 5 minutes).</string>
    <string name="medtronic_cmd_cant_read_tbr">Could not read current TBR.</string>
    <string name="medtronic_cmd_cant_cancel_tbr_stop_op">Could not cancel current TBR. Stopping operation.</string>
    <string name="medtronic_cmd_set_profile_pattern_overflow">Profile set failed, because following patterns, have too big basal rate: %1$s</string>
    <string name="medtronic_cmd_bolus_could_not_be_delivered">Bolus could not be delivered.</string>
    <string name="medtronic_cmd_bolus_could_not_be_delivered_no_insulin">Bolus could not be delivered, because available insulin amount (%1$.2f) is less than bolus required (%2$.2f).</string>
    <string name="common_off">Off</string>
    <string name="key_set_neutral_temps" translatable="false">set_neutral_temps</string>
    <string name="set_neutral_temps_title">Set neutral temp basals</string>
    <string name="set_neutral_temps_summary">If enabled, it will cancel a temporary basal before the end of each hour. This method can help stop some pumps beeping/vibrating on the hour.</string>
    <string name="sixdigitnumber" translatable="false">^\\d{6}</string>
    <string name="medlink_force_bolus_history_read_title">Dispatch a bolus history read after each bolus</string>
    <string name="medlink_key_force_bolus_history_read_summary">If enabled AAPS will dispatch a read bolus history command after each bolus, or when the latest bolus date changes, otherwise it will try to get bolus info from the get status command.</string>
    <string name="medlink_key_interval_between_bt_connections_title">Amount of seconds between two consecutive BT connections</string>
    <string name="medlink_init_command_summary">Here you can choose which commands will be delivered when the aaps initialize.</string>
</resources>