<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:validate="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/med_link_preferences"
        app:initialExpandedChildrenCount="40">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@bool/key_medlink_change_cannula"
            android:summary="@string/medlink_change_cannula_summary"
            android:title="@string/medlink_change_cannula_action" />

        <EditTextPreference
            android:defaultValue="120"
            android:key="@string/med_link_calibration_first_alarm"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/key_med_link_calibration_first_alarm"
            validate:customRegexp="@string/onetothreedigitnumber"
            validate:testErrorString="@string/error_mustbe1or3digitnumber"
            validate:testType="regexp">

        </EditTextPreference>

        <EditTextPreference
            android:defaultValue="15"
            android:key="@int/med_link_calibration_second_alarm"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/key_med_link_calibration_second_alarm"
            validate:customRegexp="@string/onetothreedigitnumber"
            validate:testErrorString="@string/error_mustbe1or3digitnumber"
            validate:testType="regexp">

        </EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/medlink_init_command_summary"
        android:title="@string/medlink_init_commands"
        app:initialExpandedChildrenCount="0">


        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@bool/key_medlink_handle_cannula_change_event"
            android:title="@string/medlink_handle_cannula_change_event" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@bool/key_medlink_handle_sensor_change_event"
            android:title="@string/medlink_handle_sensor_change_event" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@bool/key_medlink_init_commands_last_bg_history"
            android:title="@string/medlink_init_commands_last_bg_history" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@bool/key_medlink_init_commands_previous_bg_history"
            android:title="@string/medlink_init_commands_previous_bg_history" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@bool/key_medlink_init_commands_last_bolus_history"
            android:title="@string/medlink_init_commands_last_bolus_history" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@bool/key_medlink_change_cannula"
            android:summary="@string/medlink_change_cannula_summary"
            android:title="@string/medlink_change_cannula_action" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/medlink_medtronic_name"
        app:initialExpandedChildrenCount="40">

        <EditTextPreference
            android:defaultValue="000000"
            android:key="@string/key_medtronic_serial"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:title="@string/medtronic_serial_number"
            validate:customRegexp="@string/sixdigitnumber"
            validate:testErrorString="@string/error_mustbe6digitnumber"
            validate:testType="regexp" />


        <ListPreference
            android:defaultValue="1"
            android:entries="@array/medLinkMedtronicPumpTypeArray"
            android:entryValues="@array/medLinkMedtronicPumpTypeArray"
            android:key="@string/key_medtronic_pump_type"
            android:title="@string/medtronic_pump_type" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/medLinkBatteryInfoArray"
            android:entryValues="@array/medLinkBatteryInfoArray"
            android:key="@string/key_medlink_battery_info"
            android:title="@string/pref_medlink_battery_info" />

        <!--        <TextView-->
        <!--            android:id="@+id/info"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:gravity="center"-->
        <!--            android:text="@string/medlink_init_command_summary"-->
        <!--            android:textAppearance="?textAppearanceBody2"-->
        <!--            android:textColor="?colorPrimary" />-->


        <!--            android:entries="@array/medlinkInitCommandsArray"-->
        <!--            android:entryValues="@array/medlinkInitCommandsValues"-->
        <!--            android:summary="@string/medlink_init_command_summary"-->
        <!--            android:key="@string/key_medlink_init_command"-->
        <!--            android:title="@string/medlink_init_commands"-->
        <!--            android:dialogTitle="@string/medlink_init_commands" />-->
        <!--        </PreferenceCategory>-->

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/medlink_key_force_bolus_history_read"
            android:summary="@string/medlink_key_force_bolus_history_read_summary"
            android:title="@string/medlink_force_bolus_history_read_title" />

        <EditTextPreference
            android:defaultValue="30"
            android:key="@string/medlink_key_interval_between_bt_connections"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/medlink_key_interval_between_bt_connections_title"
            validate:customRegexp="@string/onetothreedigitnumber"
            validate:testErrorString="@string/error_mustbe1or3digitnumber"
            validate:testType="regexp" />

        <ListPreference
            android:defaultValue="@string/key_medtronic_pump_frequency_us_ca"
            android:entries="@array/medtronicPumpFreqArray"
            android:entryValues="@array/medtronicPumpFreqValues"
            android:key="@string/key_medtronic_frequency"
            android:selectable="true"
            android:title="@string/medtronic_pump_frequency" />

        <EditTextPreference
            android:defaultValue="35"
            android:digits="0123456789."
            android:inputType="number"
            android:key="@string/key_medtronic_max_basal"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/medtronic_pump_max_basal"
            validate:maxNumber="35"
            validate:minNumber="1"
            validate:testType="numericRange" />

        <EditTextPreference
            android:defaultValue="25"
            android:digits="0123456789."
            android:inputType="number"
            android:key="@string/key_medtronic_max_bolus"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/medtronic_pump_max_bolus"
            validate:maxNumber="25"
            validate:minNumber="1"
            validate:testType="numericRange" />

        <ListPreference
            android:defaultValue="10"
            android:entries="@array/medtronicBolusDelay"
            android:entryValues="@array/medtronicBolusDelay"
            android:key="@string/key_medtronic_bolus_delay"
            android:selectable="true"
            android:title="@string/medtronic_pump_bolus_delay" />

        <ListPreference
            android:defaultValue="@string/key_medtronic_pump_battery_no"
            android:entries="@array/medtronicBatteryType"
            android:entryValues="@array/medtronicBatteryTypeValues"
            android:key="@string/key_medtronic_battery_type"
            android:selectable="true"
            android:title="@string/medtronic_pump_battery_select" />

        <ListPreference
            android:defaultValue="@string/common_off"
            android:entries="@array/onOff"
            android:entryValues="@array/onOff"
            android:key="@string/key_medtronic_bolus_debug"
            android:selectable="true"
            android:title="@string/medtronic_bolus_debugging" />

        <Preference
            android:enabled="true"
            android:key="@string/key_medlink_mac_address"
            android:summary=""
            android:title="MedLink Configuration">
            <intent android:action="info.nightscout.androidaps.plugins.PumpCommon.dialog.MedLinkBLEScanActivity" />
        </Preference>

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_set_neutral_temps"
            android:summary="@string/set_neutral_temps_summary"
            android:title="@string/set_neutral_temps_title" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>